Fix heading shift breakpoint

--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -20,7 +20,7 @@ h2
   .heading__top
     &::first-letter
       color: $accent-color
-    @include min-width(1100)
+    @include min-width(1284)
       margin-left: -120px
 
 .heading
